--- a/app/src/main/res/layout/build_algorithm.xml
+++ b/app/src/main/res/layout/build_algorithm.xml
@@ -16,10 +16,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/surfaceView"
-        android:layout_below="@+id/editText2"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_above="@+id/button2" />
+        android:layout_above="@+id/button2"
+        android:layout_below="@+id/editText3" />
 
     <Button
         android:layout_width="wrap_content"
@@ -28,20 +28,40 @@
         android:id="@+id/button2"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_margin="10dp" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Algorithm Hex: 158f90238ac"
         android:id="@+id/textView9"
-        android:layout_alignTop="@+id/button2"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_toStartOf="@+id/button2"
         android:layout_marginBottom="10dp"
-        android:layout_toStartOf="@+id/button2" />
+        android:layout_alignTop="@+id/button2"
+        android:paddingTop="5dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText3"
+        android:layout_below="@+id/editText2"
+        android:layout_alignStart="@+id/editText2"
+        android:layout_toStartOf="@+id/textView7"
+        android:hint="Test Website Name" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="basePassword1"
+        android:id="@+id/textView7"
+        android:layout_below="@+id/editText2"
+        android:layout_alignBottom="@+id/editText3"
+        android:gravity="center"
+        android:layout_alignEnd="@+id/editText2" />
 
 </RelativeLayout>
