AlgorithmView responds to taps

--- a/app/src/main/res/layout/build_algorithm.xml
+++ b/app/src/main/res/layout/build_algorithm.xml
@@ -15,7 +15,7 @@
     <com.wylder.passwordkeep.ide.AlgorithmView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/surfaceView"
+        android:id="@+id/algorithmView"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_above="@+id/button2"
