--- a/app/src/main/res/layout/build_algorithm.xml
+++ b/app/src/main/res/layout/build_algorithm.xml
@@ -10,6 +10,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="10dp"
+        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
         android:hint="Algorithm Name" />
 
     <com.wylder.passwordkeep.ide.AlgorithmView
@@ -52,6 +53,7 @@
         android:layout_below="@+id/editText2"
         android:layout_alignStart="@+id/editText2"
         android:layout_toStartOf="@+id/textView7"
+        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
         android:hint="Test Website Name" />
 
     <TextView
