--- a/app/src/main/res/layout/build_algorithm.xml
+++ b/app/src/main/res/layout/build_algorithm.xml
@@ -30,7 +30,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="10dp"
-        android:layout_toStartOf="@+id/button2"
+        android:layout_toStartOf="@+id/button3"
         android:layout_marginBottom="10dp"
         android:layout_alignTop="@+id/button2"
         android:paddingTop="5dp" />
@@ -56,5 +56,13 @@
         android:layout_alignTop="@+id/editText3"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="10dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Action"
+        android:id="@+id/button3"
+        android:layout_below="@+id/algorithmView"
+        android:layout_toStartOf="@+id/button2" />
 
 </RelativeLayout>
