--- a/app/src/main/res/layout/set_password.xml
+++ b/app/src/main/res/layout/set_password.xml
@@ -35,21 +35,40 @@
     </EditText>
 
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/editText2"
+        android:layout_below="@+id/editText" />
+
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Show Password"
         android:id="@+id/checkBox"
         android:checked="false"
-        android:layout_below="@+id/editText"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/editText2"
+        android:layout_alignParentStart="true"
+        android:layout_alignBottom="@+id/button6" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Set Password"
+        android:id="@+id/button6"
+        android:layout_below="@+id/editText2"
+        android:layout_alignParentEnd="true" />
 
     <include
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         layout="@layout/tips"
-        android:layout_below="@+id/checkBox"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/button6"
+        android:layout_alignParentBottom="true" />
 
 
 </RelativeLayout>
