--- a/app/src/main/res/layout/enter_password.xml
+++ b/app/src/main/res/layout/enter_password.xml
@@ -8,15 +8,6 @@
     android:paddingLeft="5dp"
     android:paddingRight="5dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enter Base Password"
-        android:id="@+id/textView"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0"
-        android:theme="@android:style/TextAppearance.Material.Title" />
-
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,11 +15,20 @@
         android:ems="10"
         android:id="@+id/editText"
         android:layout_gravity="center_horizontal"
-        android:theme="@android:style/TextAppearance.Widget.TextView"
         android:layout_weight="0"
-        android:layout_marginTop="7dp">
+        android:layout_marginTop="7dp"
+        android:hint="Enter Password"
+        android:selectAllOnFocus="true">
         <requestFocus />
     </EditText>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Submit"
+        android:id="@+id/button"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0" />
 
     <ImageView
         android:layout_width="wrap_content"
