--- a/app/src/main/res/layout/algorithm_view.xml
+++ b/app/src/main/res/layout/algorithm_view.xml
@@ -20,7 +20,7 @@
 
     </android.support.v7.widget.CardView>
 
-    <AlgorithmView
+    <com.wylder.passwordkeep.ide.AlgorithmView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/algorithmView"
