--- a/app/src/main/res/layout/password_set.xml
+++ b/app/src/main/res/layout/password_set.xml
@@ -10,14 +10,14 @@
         android:layout_height="wrap_content"
         android:id="@+id/textView"
         android:layout_gravity="center_horizontal"
-        android:layout_weight="0"
-        android:theme="@android:style/TextAppearance.Material.Title"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:padding="12dp"
+        android:padding="10dp"
         android:text="Create Base Password"
         android:gravity="center"
-        android:layout_alignStart="@+id/editText" />
+        android:layout_alignStart="@+id/editText"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
     <EditText
         android:layout_width="match_parent"
@@ -26,13 +26,8 @@
         android:ems="10"
         android:id="@+id/editText"
         android:layout_gravity="center_horizontal"
-        android:theme="@android:style/TextAppearance.Widget.TextView"
-        android:layout_weight="0"
         android:layout_below="@+id/textView"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true">
-        <requestFocus />
-    </EditText>
+        android:hint="Enter new Password" />
 
 
     <EditText
@@ -41,7 +36,8 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/editText2"
-        android:layout_below="@+id/editText" />
+        android:layout_below="@+id/editText"
+        android:hint="Confirm Password" />
 
     <CheckBox
         android:layout_width="wrap_content"
