--- a/app/src/main/res/layout/history_card.xml
+++ b/app/src/main/res/layout/history_card.xml
@@ -2,6 +2,8 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_margin="10dp"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="2dp">
