--- a/app/src/main/res/layout/algorithm_fragment.xml
+++ b/app/src/main/res/layout/algorithm_fragment.xml
@@ -32,8 +32,8 @@
         android:layout_height="wrap_content"
         android:text="Add"
         android:id="@+id/button9"
-        android:layout_marginRight="4dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_margin="4dp" />
 
 </RelativeLayout>
