--- a/app/src/main/res/layout/history_card.xml
+++ b/app/src/main/res/layout/history_card.xml
@@ -1,36 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_margin="10dp"
-    android:foreground="?android:attr/selectableItemBackground"
-    android:clickable="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="2dp">
+    android:background="?android:attr/selectableItemBackground" >
 
-    <LinearLayout
-        android:layout_margin="10dp"
-        android:padding="4dp"
-        android:orientation="horizontal"
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="19sp"
+        android:id="@+id/siteName"
+        android:textStyle="bold"
+        android:text="Website name"
+        android:layout_alignTop="@+id/sitePassword"
+        android:layout_toEndOf="@+id/letter"
+        android:layout_alignBottom="@+id/letter"
+        android:gravity="center_vertical" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="17sp"
+        android:id="@+id/sitePassword"
+        android:text="password"
+        android:gravity="center_vertical|right"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_alignBottom="@+id/letter" />
+
+    <View
+        android:id="@+id/divider"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider" />
 
-        <TextView
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:id="@+id/siteName"
-            android:textStyle="bold" />
+    <TextView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:text="F"
+        android:id="@+id/letter"
+        android:layout_alignParentStart="true"
+        android:layout_margin="10dp"
+        android:textSize="30dp"
+        android:layout_alignParentTop="true"
+        android:gravity="center" />
 
-        <TextView
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:id="@+id/sitePassword"
-            android:gravity="center" />
-
-    </LinearLayout>
-
-</android.support.v7.widget.CardView>
+</RelativeLayout>
